--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "license": "Apache 2.0",
   "homepage": "",
   "dependencies": {
-    "@polkadot/api": "6.11.1",
-    "@unique-nft/types": "0.2.0",
+    "@polkadot/api": "8.8.2",
+    "@unique-nft/quartz-mainnet-types": "0.5.2",
     "bignumber.js": "^9.0.0",
     "delay": "^5.0.0",
     "fs": "0.0.1-security"
